# nheengatu

./: README.md
corpus/casasnovas-2006/: README.md
corpus/navarro-2016/: e-yrl-por-eng-01-pos.txt  e-yrl-por-eng-01.txt  e-yrl-por-eng-02-pos.txt  e-yrl-por-eng-02.txt  e-yrl-por-eng-03-pos.txt  e-yrl-por-eng-03.txt  e-yrl-por-eng-04-pos.txt  e-yrl-por-eng-04.txt  e-yrl-por-eng-05-pos.txt  e-yrl-por-eng-05.txt  e-yrl-por-eng-06-pos.txt  e-yrl-por-eng-06.txt  e-yrl-por-eng-07-pos.txt  e-yrl-por-eng-07.txt  e-yrl-por-eng-08-pos.txt  e-yrl-por-eng-08.txt  e-yrl-por-eng-09-pos.txt  e-yrl-por-eng-09.txt  e-yrl-por-eng-10-pos.txt  e-yrl-por-eng-10.txt  e-yrl-por-eng-11-pos.txt  e-yrl-por-eng-11.txt  e-yrl-por-eng-12-pos.txt  e-yrl-por-eng-12.txt  e-yrl-por-eng-13-pos.txt  e-yrl-por-eng-13.txt  t-yrl-por-eng-01-pos.txt  t-yrl-por-eng-01.txt  t-yrl-por-eng-02-pos.txt  t-yrl-por-eng-02.txt  t-yrl-por-eng-03-pos.txt  t-yrl-por-eng-03.txt  t-yrl-por-eng-04-pos.txt  t-yrl-por-eng-04.txt  t-yrl-por-eng-05-pos.txt  t-yrl-por-eng-05.txt  t-yrl-por-eng-06-pos.txt  t-yrl-por-eng-06.txt  t-yrl-por-eng-07-pos.txt  t-yrl-por-eng-07.txt  (+20 more)
corpus/navarro-avila-2017/: 01_mira_yupirungawa.txt
corpus/trevisan-2017/: 01_muruxawamiri_yrl-por-en-fr.txt  02_muruxawamiri_yrl-por-eng-fra.txt  03_muruxawamiri_yrl-por-eng-fra.txt  04_muruxawamiri_yrl-por-eng-fra.txt  05_muruxawamiri_yrl-por-eng-fra.txt  06_muruxawamiri_yrl-por-en-fr.txt  07_muruxawamiri_yrl-por-en-fr.txt  08_muruxawamiri_yrl-por-en-fr.txt  09_muruxawamiri_yrl-por-en-fr.txt  10_muruxawamiri_yrl-por-en-fr.txt  11_muruxawamiri_yrl-por-en-fr.txt  12_muruxawamiri_yrl-por-eng-fra.txt  13_muruxawamiri_yrl-por-en-fr.txt  14_muruxawamiri_yrl-por-en-fr.txt  (+13 more)
src/: AmbiguitiesExtractor.py  CommandGenerator.py
src/NheengataggerDisambiguator/NheengataggerDisambiguator/: README.md  pyproject.toml
src/NheengataggerDisambiguator/NheengataggerDisambiguator/data/: NheengataggerTagset.xlsx  contexto_conllu.csv  contexto_conllu_edt.csv  contexto_navarro.csv  tagset.xlsx
src/NheengataggerDisambiguator/NheengataggerDisambiguator/disambiguator_src/: cli.py  context.py  corpus.py  disambiguator.py  sentence.py  utils.py  word.py
(+41 files in other folders)
