[tool.poetry]
name = "NheengataggerDisambiguator"
version = "0.1.0"
description = "Pacote Python para desambiguar sentenças em nheengatu etiquetadas automaticamente pelo Nheengatagger."
authors = [
  "Juliana Gurgel <julianagurgel@letras.ufc.br>",
  "Victor Santos <victor_santos@fisica.ufc.br>",
]
license = "LGPL-2.1-only"
readme = "README.md"
homepage = "https://github.com/juliana-gurgel/nheengatu/tree/main/src/NheengataggerDisambiguator"
repository = "https://github.com/juliana-gurgel/nheengatu/tree/main/src/NheengataggerDisambiguator"
keywords = ["nheengatu", "linguistics", "postagging"]
packages = [{include = "disambiguator_src"}]

[tool.poetry.scripts]
desambiguador = 'disambiguator_src.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
pandas = "^2.0.1"
llist = "^0.7.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Bug Tracker" = "https://github.com/juliana-gurgel/nheengatu/tree/main/src/NheengataggerDisambiguator"

